# BlueberryBox

./: README.md  app.js  package.json  seo.json
bbox/: Cargo.toml  config.json  config_doc.txt
bbox/src/: args.rs  banner.rs  core.rs  global.rs  main.rs  resource.rs  server.rs  setting.rs
bbox/static/: index.html
