[package]
name = "BlueberryBox"
version = "0.0.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
async-recursion = "0.3.2"
visdom = { version = "0.4.11" }
notify = "4.0.0"
lazy_static = "1.4.0"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }